Fix menu price alignments in wider width resolutions.

--- a/src/scss/blocks/_site-main.scss
+++ b/src/scss/blocks/_site-main.scss
@@ -89,6 +89,13 @@ h4 {
   grid-column: 2;
 }
 
+@media (min-width: 1280px) and (max-width: 1920px) {
+  .item__price {
+    grid-row: 3;
+    grid-column: 3;
+  }
+}
+
 .item__description {
   grid-column: 1 / -1;
   margin-bottom: 0.3rem;
